data extraction file

--- a/data_extraction.ipynb
+++ b/data_extraction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a93db9c",
+   "id": "c6e92c91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d22e4211",
+   "id": "1a49f6f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60517cb0",
+   "id": "20b7db55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aee45d98",
+   "id": "1bdcf9b1",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbac8e6e",
+   "id": "2dc0f27e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,28 +145,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "795af52e",
+   "id": "695df118",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = train_set.drop('class', axis=1)\n",
-    "y_train = train_set['class']"
+    "train_set.to_csv(\"final_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a29162",
+   "id": "d9324913",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(X_train)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d82fff",
+   "id": "9d0afb65",
    "metadata": {},
    "outputs": [],
    "source": []
